--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,12 +1,19 @@
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #262626;
+  --heading: #262626;
+  --text: #424242;
+  --link: #262626;
+  --button: #262626;
+  --span: #f2f2f2;
+  --sliderspanback: #d2c0ec;
+  --ftrlink: #aeaeae;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #262626;
+    --foreground: #ffffff;
   }
 }
 
@@ -19,7 +26,7 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Poppins, sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -32,7 +39,24 @@ body {
 
 a {
   color: inherit;
-  text-decoration: none;
+  text-decoration: none !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: Orbitron, sans-serif !important;
+  color: var(--heading);
+  line-height: 1.2em;
+  letter-spacing: 1px;
+}
+
+p {
+  color: var(--text);
+  line-height: 1.5em;
 }
 
 @media (prefers-color-scheme: dark) {
