--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -27,3 +27,20 @@
   border: 1px solid #ffffff;
   border-radius: 0px 10px 0px 10px;
 }
+
+.servicesSection {
+  padding: 200px 0;
+  background-size: 74px 96px;
+  background-image: linear-gradient(
+      to right,
+      rgba(210, 192, 236, 0.41) 1px,
+      transparent 1px
+    ),
+    linear-gradient(to bottom, rgba(210, 192, 236, 0.41) 1px, transparent 1px);
+  background-position: center;
+  background-repeat: repeat;
+  display: grid;
+  width: 100%;
+  min-height: 100%;
+  position: relative;
+}
